- #7467 Load server or client args from `synergy-config.toml`
- #7469 Option to link against local `libportal` and other subprojects
- #7471 Use `vcpkg` to manage `openssl` dep instead of `choco`
- #7473 Simplify `vcpkg` caching and use system `vcpkg`
- #7474 FreeBSD GitHub runner with `vmactions/freebsd-vm@v1`
- #7479 Add `BUILD.md` to get people started

# 1.15.1

Enhancements:

- #7452 Change default value for dev thanks message

# 1.15.0

Enhancements:

- #7254 Bind client to a network interface with `--address`
- #7262 Backward compatibility for M1 and M2 builds
- #7263 Change name of Flatpak uploaded to snapshots
- #7265 Remove obtrusive Linux key press log messages
- #7269 Change file drag drop ERROR to DEBUG message
- #7274 Support env var to build unified core binary
- #7277 Change all errors that cause crash are FATAL
- #7282 Improve error handling for thread jobs
- #7284 Change session ID info log message to DEBUG2
- #7283 Update all workflows and fix broken macOS workflows
- #7313 Fix CodeQL workflow: Failed to perl 404 Not Found
- #7317 Bump `sonar-scanner-cli` to 5.0.1.3006
- #7318 Remove Azure Pipelines config entirely
- #7319 Remove workflows for slow self-hosted RPi runners
- #7320 Move `build_version.py` script to scripts dir
- #7321 Switch to GitHub hosted Mac M1 runner
- #7322 Use C++20 and add Windows CMake preset
- #7323 Add Linux and macOS CMake presets
- #7325 Add timeout to all GitHub workflows
- #7326 Restore lpDesktop assignment in Windows daemon
- #7327 Only use Ninja to build on Windows
- #7328 Reset error state before calling Process32Next
- #7330 Split CMake presets into debug and release
- #7331 Script to install deps (Windows only for now)
- #7332 Static link OpenSSL libs in CMake preset for Windows
- #7333 Update VS Code config for Windows daemon debugging
- #7334 Implement hello back in IPC protocol
- #7335 Clickable debug source paths and new launch target
- #7336 Add C++ and LLDB to VS Code recommendations