@@ -71,11 +71,12 @@ jobs:
           key: vcpkg-${{ runner.os }}-${{ hashFiles('vcpkg.json', 'vcpkg-configuration.json') }}
           restore-keys: vcpkg-${{ runner.os }}
 
-      - name: Cache Python env
-        uses: actions/cache@v4
+      # Should only restore the .venv directory from cache.
+      - name: Init Python venv
+        uses: ./.github/actions/init-python
         with:
-          path: build/python
-          key: python_env-${{ runner.os }}-${{ hashFiles('scripts/pyproject.toml') }}
+          cache-key: ci-${{ matrix.target.name }}
+          setup: false
 
       - name: Cache deps dir
         uses: actions/cache@v4
@@ -162,6 +163,13 @@ jobs:
 
       - name: Get version
         uses: ./.github/actions/get-version
+
+      # Should only restore the .venv directory from cache.
+      - name: Setup Python venv
+        uses: ./.github/actions/init-python
+        with:
+          cache-key: ci-${{ matrix.target.name }}
+          setup: false
 
       - name: Cache deps dir
         uses: actions/cache@v4
@@ -280,6 +288,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      # Should only restore the .venv directory from cache.
+      - name: Setup Python venv
+        uses: ./.github/actions/init-python
+        with:
+          cache-key: ci-${{ matrix.distro.name }}
+          setup: false
 
       - name: Get version
         uses: ./.github/actions/get-version
