@@ -12,14 +12,19 @@ on:
         required: true
 
 jobs:
-  check-issue-tech-support:
+  issue-check-support:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Check if issue requires tech support
+      - name: Setup Python venv
+        uses: ./.github/actions/
+        with:
+          cache-key: "ubuntu-latest"
+
+      - name: Check issue
         id: issue-check
         run: ./scripts/github.py --issue-check-tech-support
         env:
