@@ -7,6 +7,7 @@
     "aqtinstall",
     "Axelson",
     "Breen",
+    "cmakelang",
     "codesign",
     "codesigning",
     "Compat",
@@ -64,6 +65,8 @@
     "unittests",
     "Valgrind",
     "vcpkg",
+    "venv",
+    "vmactions",
     "Volker",
     "whot",
     "winget"
